@@ -11,6 +11,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #3062455 [core] copy procedures and routines before tables
 - bug #3062455 [export] with SQL, export procedures and routines before tables
 - bug #3056023 [import] USE query not working
+- bug #3038193 [display] Error when editing row with GEOMETRY column
 
 3.3.7.0 (2010-09-07)
 - patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
